SUBDIRS=
lib_LIBRARIES=libspidermodule.a 
libspidermodule_a_SOURCES= FetcherManager.cpp FetcherManager.h LocalDbManager.cpp LocalDbManager.h LogStatisticManager.cpp LogStatisticManager.h CheckpointManager.cpp CheckpointManager.h UrlAnalyseManager.cpp UrlAnalyseManager.h TaskScheduleManager.cpp TaskScheduleManager.h DBAccess.cpp DBAccess.h DBAccessType.cpp DBAccessType.h InfoCrawler.cpp InfoCrawler.h Manager.h Manager.cpp DbManager.cpp DbManager.h ExternalManager.cpp ExternalManager.h PageManager.cpp PageManager.h DbManager.h DbManager.cpp client_test.h client_test.cpp test.h test.cpp thrift/DataService_constants.cpp thrift/DataService_constants.h thrift/DataService.cpp thrift/DataService.h\
thrift/DataService_types.cpp thrift/DataService_types.h Definition.h  DbConnectionManager.h  DbConnectionMySQLManager.h DbConnectionMySQLManager.cpp DbMySQLManager.h DbMySQLManager.cpp ThrfitManager.h ThriftManager.cpp bloomfilter/bloom_filter.cpp  bloomfilter/bloom_filter.h  bloomfilter/debug.h  bloomfilter/list.h  bloomfilter/murmur.cpp  bloomfilter/murmur.h bloomfilter/common_define.h TestThrift.cpp thrift_filter/Serv.cpp thrift_filter/bloomfilter_types.cpp thrift_filter/bloomfilter_constants.cpp
