SUBDIRS=
lib_LIBRARIES=libspidertools.a
libspidertools_a_SOURCES=ic_types.h ic_types.cpp  mycxxlog.cpp mycxxlog.h  buffer.c debug.c hash_table.c hash_table.h host.c mymd5.c mymd5.h sysutil.c sysutil.h host_cache.c util.h util.cpp  db.cpp db.h Format.cpp Format.h HtRegex.cpp HtRegex.h readconf.h readconf.c Url.cpp Url.h utilcpp.h utilcpp.cpp Http.cpp Http.h Page.cpp Page.h list.h finalpage.cpp finalpage.h FSBigFile.cpp FSBigFile.h BigFile.h MyConnection.cpp MyConnection.h stack.c stack.h hlink.l hlink.h uri.l uri.h content_encoding.cpp content_encoding.h ReadWriteBuffer.cpp ReadWriteBuffer.h MemCacheClient.cpp MemCacheClient.h sha1.cpp sha1.h mycxxlog.cpp mycxxlog.h CDateTime.cpp CDateTime.h mylock.cpp mylock.h MySQLConnectionPool.cpp MySQLConnectionPool.h

lib_LTLIBRARIES=libcmsinfo.la libotherfunc.la
libcmsinfo_la_SOURCES=cmsinfo.cpp cmsinfo.h
libotherfunc_la_SOURCES=OtherFunc.cpp OtherFunc.h
